# lazy-whisper-api

./: .env.apple.example  .env.cuda.example  .env.example  .gitignore  LICENSE  Makefile  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements-common.txt  requirements-cpu.txt  requirements-diarization.txt  requirements-gpu-cu126.txt  requirements-qwen-cu126.txt  requirements-qwen-mlx.txt  setup-diarization-runtime.sh  setup-macos.sh  setup-qwen-mlx-runtime.sh  setup-qwen-runtime.sh  smoke-test-diarization.sh  whisper-api.sh  whisper-large.sh  whisper-service.sh  whisper_api.py
docs/: architecture.md  benchmarks.md
lazy_whisper_api/: __init__.py  app.py  audio_timeline.py  auth.py  backends.py  config.py  diarization.py  diarization_types.py  diarization_worker.py  editing.py  editing_types.py  errors.py  model_manager.py  qwen_mlx_worker.py  qwen_worker.py  realtime.py  responses.py  silero_vad.py  speaker_attribution.py  streaming.py  transcription.py  worker_protocol.py
tests/: conftest.py  test_audio_timeline.py  test_config_and_scheduler.py  test_diarization.py  test_editing.py  test_http_api.py  test_qwen_mlx_worker.py  test_realtime_api.py  test_worker_protocol.py
