[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lazy-whisper-api"
version = "0.1.0"
description = "OpenAI-compatible local transcription API with lazy-loaded Faster Whisper models."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "wandeber" },
]
dependencies = [
  "fastapi==0.135.3",
  "uvicorn==0.44.0",
  "python-multipart==0.0.25",
  "faster-whisper==1.2.1",
  "imageio-ffmpeg==0.6.0",
  "huggingface_hub==1.10.1",
  "transformers==5.5.3",
  "sentencepiece==0.2.1",
]

[project.optional-dependencies]
cpu = ["torch==2.11.0+cpu"]
gpu-cu126 = ["torch==2.11.0+cu126"]
